(library
 (name visa_debugger)
 (public_name visa-debugger)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Fpath_base
  -open
  Core)
 (libraries
  bopkit.bit-utils
  bogue
  core
  core_unix
  core_unix.core_thread
  fpath
  fpath-base
  bopkit.visa
  bopkit.visa-assembler
  bopkit.visa-simulator
  bopkit.visa-syntax)
 (lint
  (pps ppx_js_style -check-doc-comments))
 (preprocess
  (pps
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
