(library
 (name visa_debugger)
 (public_name visa-debugger)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Cmdlang)
 (libraries
  base
  bogue
  cmdlang
  err
  err-cli
  fpath
  bopkit.visa
  bopkit.visa-assembler
  bopkit.visa-simulator
  bopkit.visa-syntax)
 (lint
  (pps ppx_js_style -check-doc-comments))
 (preprocess
  (pps -unused-code-warnings=force ppx_let ppx_sexp_conv ppx_sexp_value)))
